k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-app-service
spec:
  type: NodePort
  selector:
    app: secure-app
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30080
